# cadence-clinical

./: .gitattributes  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  conflict-check.yml
apps/ctms/: main.py  models.py
apps/designer/: db.py  main.py  mapper.py  validator.py  xml_mapping.py
apps/etmf/: database.py  lifecycle.py  main.py  migrate.py  models.py
apps/execution/: cryptography.py  ledger.py  main.py  queue.py  translator.py  trial_lock.py
apps/gateway/: main.py
apps/interop/: database.py  main.py  migrate.py
apps/quality/: __init__.py  database.py  main.py  models.py
docker/: docker-compose.yml
docs/: DEVELOPMENT_GUIDE.md  LOCAL_DEV_ENVIRONMENT.md  SRS.md
docs/SDLC/: 01_PRD.md  01_Product_Requirements_Document_PRD.md  02_TDD.md  02_Technical_Design_Document_TDD.md  03_API_SPEC.md  (+12 more)
scripts/: clean_secrets_baseline.py  generate_adr_index.py  generate_rtm.py  post_pr_comment.py  validate_adrs.py
tests/: conftest.py  test_api_contract_validation.py  test_audit.py  test_clinical_queries.py  test_cryptography.py  test_ctms.py  test_database_consolidation.py  test_etmf.py  test_etmf_qc.py  test_gateway.py  test_layout_validator.py  test_ledger.py  test_main.py  test_mapping_validator.py  test_migrate.py  test_polling_daemon.py  test_pr_comment.py  test_quality.py  test_security_middleware.py  test_tmf_reference_model.py  test_transactional_queue.py  test_transformers.py  test_translation_recovery.py  test_translator.py  test_trial_lock.py  test_validator.py
(+16 files in other folders)
