[tool.black]
line-length = 88
target-version = [
    "py311",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=apps --cov=packages --cov-fail-under=80"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "apps",
    "packages",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadence-clinical"
version = "0.1.0"
description = "The Metadata-Driven Clinical Execution Platform"
authors = [
    { name = "Frederick de Ruiter", email = "fpderutier@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "neo4j>=5.18.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "usdm>=0.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.1",
]

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "packages"
]
